[package]
name = "epg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
postgresql_embedded = "0.16.3"
postgresql_extensions = "0.16.3"
sqlx = { version = "0.8.2", default-features = false, features = ["postgres", "runtime-tokio"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["full"] }
